parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s
Rule 1     s -> INICIOPROG import FINPROG
Rule 2     import -> IMPORT APAR LIBRER CPAR FINLINEA import
Rule 3     import -> declvar
Rule 4     declvar -> VBLE APAR IDEN INT CPAR FINLINEA declvar
Rule 5     declvar -> VBLE APAR IDEN STRING CPAR FINLINEA declvar
Rule 6     declvar -> VBLE APAR IDEN FLOAT CPAR FINLINEA declvar
Rule 7     declvar -> VBLE APAR IDEN BOOL CPAR FINLINEA declvar
Rule 8     declvar -> COMLIN FINLINEA declvar
Rule 9     declvar -> COMBLO FINLINEA declvar
Rule 10    declvar -> c
Rule 11    c -> IDEN ASIGN DSTRING FINLINEA c
Rule 12    c -> IDEN ASIGN DBOOL FINLINEA c
Rule 13    c -> IDEN ASIGN DFLOAT FINLINEA c
Rule 14    c -> IDEN ASIGN DINT FINLINEA c
Rule 15    c -> COMLIN FINLINEA c
Rule 16    c -> COMBLO FINLINEA c
Rule 17    c -> d
Rule 18    d -> IDEN ASIGN IDEN SUMA DINT FINLINEA d
Rule 19    d -> IDEN ASIGN IDEN RESTA DINT FINLINEA d
Rule 20    d -> IDEN ASIGN IDEN MULT DINT FINLINEA d
Rule 21    d -> IDEN ASIGN IDEN DIV DINT FINLINEA d
Rule 22    d -> IDEN ASIGN IDEN SUMA DFLOAT FINLINEA d
Rule 23    d -> IDEN ASIGN IDEN RESTA DFLOAT FINLINEA d
Rule 24    d -> IDEN ASIGN IDEN MULT DFLOAT FINLINEA d
Rule 25    d -> IDEN ASIGN IDEN DIV DFLOAT FINLINEA d
Rule 26    d -> IDEN ASIGN IDEN SUMA IDEN FINLINEA d
Rule 27    d -> IDEN ASIGN IDEN RESTA IDEN FINLINEA d
Rule 28    d -> IDEN ASIGN IDEN MULT IDEN FINLINEA d
Rule 29    d -> IDEN ASIGN IDEN DIV IDEN FINLINEA d
Rule 30    d -> IDEN ASIGN DINT SUMA DINT FINLINEA d
Rule 31    d -> IDEN ASIGN DINT RESTA DINT FINLINEA d
Rule 32    d -> IDEN ASIGN DINT MULT DINT FINLINEA d
Rule 33    d -> IDEN ASIGN DINT DIV DINT FINLINEA d
Rule 34    d -> IDEN ASIGN DFLOAT SUMA DFLOAT FINLINEA d
Rule 35    d -> IDEN ASIGN DFLOAT RESTA DFLOAT FINLINEA d
Rule 36    d -> IDEN ASIGN DFLOAT MULT DFLOAT FINLINEA d
Rule 37    d -> IDEN ASIGN DFLOAT DIV DFLOAT FINLINEA d
Rule 38    d -> COMLIN FINLINEA d
Rule 39    d -> COMBLO FINLINEA d
Rule 40    d -> e
Rule 41    empty -> <empty>
Rule 42    e -> FUNC IDEN APAR argumentos CPAR DPUNT INT ALLA declvar CLLA declvar
Rule 43    e -> FUNC IDEN APAR argumentos CPAR DPUNT STRING ALLA declvar CLLA declvar
Rule 44    e -> FUNC IDEN APAR argumentos CPAR DPUNT FLOAT ALLA declvar CLLA declvar
Rule 45    e -> FUNC IDEN APAR argumentos CPAR DPUNT BOOL ALLA declvar CLLA declvar
Rule 46    e -> COMLIN FINLINEA e
Rule 47    e -> COMBLO FINLINEA e
Rule 48    e -> f
Rule 49    argumentos -> IDEN DPUNT INT COMA argumentos2
Rule 50    argumentos -> IDEN DPUNT FLOAT COMA argumentos2
Rule 51    argumentos -> IDEN DPUNT STRING COMA argumentos2
Rule 52    argumentos -> IDEN DPUNT BOOL COMA argumentos2
Rule 53    argumentos -> IDEN DPUNT INT
Rule 54    argumentos -> IDEN DPUNT FLOAT
Rule 55    argumentos -> IDEN DPUNT STRING
Rule 56    argumentos -> IDEN DPUNT BOOL
Rule 57    argumentos -> <empty>
Rule 58    argumentos2 -> IDEN DPUNT INT COMA argumentos2
Rule 59    argumentos2 -> IDEN DPUNT FLOAT COMA argumentos2
Rule 60    argumentos2 -> IDEN DPUNT STRING COMA argumentos2
Rule 61    argumentos2 -> IDEN DPUNT BOOL COMA argumentos2
Rule 62    argumentos2 -> IDEN DPUNT INT argumentos
Rule 63    argumentos2 -> IDEN DPUNT FLOAT argumentos
Rule 64    argumentos2 -> IDEN DPUNT STRING argumentos
Rule 65    argumentos2 -> IDEN DPUNT BOOL argumentos
Rule 66    f -> PROC IDEN APAR argumentos CPAR ALLA declvar CLLA f
Rule 67    f -> COMLIN FINLINEA f
Rule 68    f -> COMBLO FINLINEA f
Rule 69    f -> g
Rule 70    g -> DEFPI APAR PININ DPUNT DINT CPAR FINLINEA declvar
Rule 71    g -> DEFPI APAR PINOU DPUNT DINT CPAR FINLINEA declvar
Rule 72    g -> DEFPI APAR PININ DPUNT IDEN CPAR FINLINEA declvar
Rule 73    g -> DEFPI APAR PINOU DPUNT IDEN CPAR FINLINEA declvar
Rule 74    g -> COMLIN FINLINEA declvar
Rule 75    g -> COMBLO FINLINEA declvar
Rule 76    g -> h
Rule 77    h -> SI APAR IDEN COMP IDEN CPAR APAR declvar CPAR SINO APAR declvar CPAR declvar
Rule 78    h -> SI APAR IDEN COMP DINT CPAR APAR declvar CPAR SINO APAR declvar CPAR declvar
Rule 79    h -> SI APAR IDEN COMP DFLOAT CPAR APAR declvar CPAR SINO APAR declvar CPAR declvar
Rule 80    h -> SI APAR IDEN COMP IDEN CPAR APAR declvar CPAR declvar
Rule 81    h -> SI APAR IDEN COMP DINT CPAR APAR declvar CPAR declvar
Rule 82    h -> SI APAR IDEN COMP DFLOAT CPAR APAR declvar CPAR declvar
Rule 83    h -> DURANTE APAR IDEN COMP IDEN CPAR ACOR declvar CCOR declvar
Rule 84    h -> DURANTE APAR IDEN COMP DINT CPAR ACOR declvar CCOR declvar
Rule 85    h -> DURANTE APAR IDEN COMP DFLOAT CPAR ACOR declvar CCOR declvar
Rule 86    h -> COMLIN FINLINEA h
Rule 87    h -> COMBLO FINLINEA h
Rule 88    h -> mov
Rule 89    h -> <empty>
Rule 90    mov -> AVANZAR APAR CPAR FINLINEA c
Rule 91    mov -> RETROCEDER APAR CPAR FINLINEA c
Rule 92    mov -> GIRARIZQ APAR CPAR FINLINEA c
Rule 93    mov -> GIRARDER APAR CPAR FINLINEA c
Rule 94    mov -> ESPERAR APAR DINT CPAR FINLINEA c
Rule 95    mov -> DETENER APAR CPAR FINLINEA c
Rule 96    mov -> COMLIN FINLINEA mov
Rule 97    mov -> COMBLO FINLINEA mov
Rule 98    mov -> c

Terminals, with rules where they appear

ACOR                 : 83 84 85
ALLA                 : 42 43 44 45 66
APAR                 : 2 4 5 6 7 42 43 44 45 66 70 71 72 73 77 77 77 78 78 78 79 79 79 80 80 81 81 82 82 83 84 85 90 91 92 93 94 95
ASIGN                : 11 12 13 14 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
AVANZAR              : 90
BOOL                 : 7 45 52 56 61 65
CCOR                 : 83 84 85
CLLA                 : 42 43 44 45 66
COMA                 : 49 50 51 52 58 59 60 61
COMBLO               : 9 16 39 47 68 75 87 97
COMLIN               : 8 15 38 46 67 74 86 96
COMP                 : 77 78 79 80 81 82 83 84 85
CPAR                 : 2 4 5 6 7 42 43 44 45 66 70 71 72 73 77 77 77 78 78 78 79 79 79 80 80 81 81 82 82 83 84 85 90 91 92 93 94 95
DBOOL                : 12
DEFPI                : 70 71 72 73
DETENER              : 95
DFLOAT               : 13 22 23 24 25 34 34 35 35 36 36 37 37 79 82 85
DINT                 : 14 18 19 20 21 30 30 31 31 32 32 33 33 70 71 78 81 84 94
DIV                  : 21 25 29 33 37
DPUNT                : 42 43 44 45 49 50 51 52 53 54 55 56 58 59 60 61 62 63 64 65 70 71 72 73
DSTRING              : 11
DURANTE              : 83 84 85
ESPERAR              : 94
FINLINEA             : 2 4 5 6 7 8 9 11 12 13 14 15 16 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 46 47 67 68 70 71 72 73 74 75 86 87 90 91 92 93 94 95 96 97
FINPROG              : 1
FLOAT                : 6 44 50 54 59 63
FUNC                 : 42 43 44 45
GIRARDER             : 93
GIRARIZQ             : 92
IDEN                 : 4 5 6 7 11 12 13 14 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 31 32 33 34 35 36 37 42 43 44 45 49 50 51 52 53 54 55 56 58 59 60 61 62 63 64 65 66 72 73 77 77 78 79 80 80 81 82 83 83 84 85
IMPORT               : 2
INICIOPROG           : 1
INT                  : 4 42 49 53 58 62
LIBRER               : 2
MULT                 : 20 24 28 32 36
PININ                : 70 72
PINOU                : 71 73
PROC                 : 66
RESTA                : 19 23 27 31 35
RETROCEDER           : 91
SI                   : 77 78 79 80 81 82
SINO                 : 77 78 79
STRING               : 5 43 51 55 60 64
SUMA                 : 18 22 26 30 34
VBLE                 : 4 5 6 7
error                : 

Nonterminals, with rules where they appear

argumentos           : 42 43 44 45 62 63 64 65 66
argumentos2          : 49 50 51 52 58 59 60 61
c                    : 10 11 12 13 14 15 16 90 91 92 93 94 95 98
d                    : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
declvar              : 3 4 5 6 7 8 9 42 42 43 43 44 44 45 45 66 70 71 72 73 74 75 77 77 77 78 78 78 79 79 79 80 80 81 81 82 82 83 83 84 84 85 85
e                    : 40 46 47
empty                : 
f                    : 48 66 67 68
g                    : 69
h                    : 76 86 87
import               : 1 2
mov                  : 88 96 97
s                    : 0

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . INICIOPROG import FINPROG

    INICIOPROG      shift and go to state 2

    s                              shift and go to state 1

state 1

    (0) S' -> s .



state 2

    (1) s -> INICIOPROG . import FINPROG
    (2) import -> . IMPORT APAR LIBRER CPAR FINLINEA import
    (3) import -> . declvar
    (4) declvar -> . VBLE APAR IDEN INT CPAR FINLINEA declvar
    (5) declvar -> . VBLE APAR IDEN STRING CPAR FINLINEA declvar
    (6) declvar -> . VBLE APAR IDEN FLOAT CPAR FINLINEA declvar
    (7) declvar -> . VBLE APAR IDEN BOOL CPAR FINLINEA declvar
    (8) declvar -> . COMLIN FINLINEA declvar
    (9) declvar -> . COMBLO FINLINEA declvar
    (10) declvar -> . c
    (11) c -> . IDEN ASIGN DSTRING FINLINEA c
    (12) c -> . IDEN ASIGN DBOOL FINLINEA c
    (13) c -> . IDEN ASIGN DFLOAT FINLINEA c
    (14) c -> . IDEN ASIGN DINT FINLINEA c
    (15) c -> . COMLIN FINLINEA c
    (16) c -> . COMBLO FINLINEA c
    (17) c -> . d
    (18) d -> . IDEN ASIGN IDEN SUMA DINT FINLINEA d
    (19) d -> . IDEN ASIGN IDEN RESTA DINT FINLINEA d
    (20) d -> . IDEN ASIGN IDEN MULT DINT FINLINEA d
    (21) d -> . IDEN ASIGN IDEN DIV DINT FINLINEA d
    (22) d -> . IDEN ASIGN IDEN SUMA DFLOAT FINLINEA d
    (23) d -> . IDEN ASIGN IDEN RESTA DFLOAT FINLINEA d
    (24) d -> . IDEN ASIGN IDEN MULT DFLOAT FINLINEA d
    (25) d -> . IDEN ASIGN IDEN DIV DFLOAT FINLINEA d
    (26) d -> . IDEN ASIGN IDEN SUMA IDEN FINLINEA d
    (27) d -> . IDEN ASIGN IDEN RESTA IDEN FINLINEA d
    (28) d -> . IDEN ASIGN IDEN MULT IDEN FINLINEA d
    (29) d -> . IDEN ASIGN IDEN DIV IDEN FINLINEA d
    (30) d -> . IDEN ASIGN DINT SUMA DINT FINLINEA d
    (31) d -> . IDEN ASIGN DINT RESTA DINT FINLINEA d
    (32) d -> . IDEN ASIGN DINT MULT DINT FINLINEA d
    (33) d -> . IDEN ASIGN DINT DIV DINT FINLINEA d
    (34) d -> . IDEN ASIGN DFLOAT SUMA DFLOAT FINLINEA d
    (35) d -> . IDEN ASIGN DFLOAT RESTA DFLOAT FINLINEA d
    (36) d -> . IDEN ASIGN DFLOAT MULT DFLOAT FINLINEA d
    (37) d -> . IDEN ASIGN DFLOAT DIV DFLOAT FINLINEA d
    (38) d -> . COMLIN FINLINEA d
    (39) d -> . COMBLO FINLINEA d
    (40) d -> . e
    (42) e -> . FUNC IDEN APAR argumentos CPAR DPUNT INT ALLA declvar CLLA declvar
    (43) e -> . FUNC IDEN APAR argumentos CPAR DPUNT STRING ALLA declvar CLLA declvar
    (44) e -> . FUNC IDEN APAR argumentos CPAR DPUNT FLOAT ALLA declvar CLLA declvar
    (45) e -> . FUNC IDEN APAR argumentos CPAR DPUNT BOOL ALLA declvar CLLA declvar
    (46) e -> . COMLIN FINLINEA e
    (47) e -> . COMBLO FINLINEA e
    (48) e -> . f
    (66) f -> . PROC IDEN APAR argumentos CPAR ALLA declvar CLLA f
    (67) f -> . COMLIN FINLINEA f
    (68) f -> . COMBLO FINLINEA f
    (69) f -> . g
    (70) g -> . DEFPI APAR PININ DPUNT DINT CPAR FINLINEA declvar
    (71) g -> . DEFPI APAR PINOU DPUNT DINT CPAR FINLINEA declvar
    (72) g -> . DEFPI APAR PININ DPUNT IDEN CPAR FINLINEA declvar
    (73) g -> . DEFPI APAR PINOU DPUNT IDEN CPAR FINLINEA declvar
    (74) g -> . COMLIN FINLINEA declvar
    (75) g -> . COMBLO FINLINEA declvar
    (76) g -> . h
    (77) h -> . SI APAR IDEN COMP IDEN CPAR APAR declvar CPAR SINO APAR declvar CPAR declvar
    (78) h -> . SI APAR IDEN COMP DINT CPAR APAR declvar CPAR SINO APAR declvar CPAR declvar
    (79) h -> . SI APAR IDEN COMP DFLOAT CPAR APAR declvar CPAR SINO APAR declvar CPAR declvar
    (80) h -> . SI APAR IDEN COMP IDEN CPAR APAR declvar CPAR declvar
    (81) h -> . SI APAR IDEN COMP DINT CPAR APAR declvar CPAR declvar
    (82) h -> . SI APAR IDEN COMP DFLOAT CPAR APAR declvar CPAR declvar
    (83) h -> . DURANTE APAR IDEN COMP IDEN CPAR ACOR declvar CCOR declvar
    (84) h -> . DURANTE APAR IDEN COMP DINT CPAR ACOR declvar CCOR declvar
    (85) h -> . DURANTE APAR IDEN COMP DFLOAT CPAR ACOR declvar CCOR declvar
    (86) h -> . COMLIN FINLINEA h
    (87) h -> . COMBLO FINLINEA h
    (88) h -> . mov
    (89) h -> .
    (90) mov -> . AVANZAR APAR CPAR FINLINEA c
    (91) mov -> . RETROCEDER APAR CPAR FINLINEA c
    (92) mov -> . GIRARIZQ APAR CPAR FINLINEA c
    (93) mov -> . GIRARDER APAR CPAR FINLINEA c
    (94) mov -> . ESPERAR APAR DINT CPAR FINLINEA c
    (95) mov -> . DETENER APAR CPAR FINLINEA c
    (96) mov -> . COMLIN FINLINEA mov
    (97) mov -> . COMBLO FINLINEA mov
    (98) mov -> . c

    IMPORT          shift and go to state 4
    VBLE            shift and go to state 6
    COMLIN          shift and go to state 8
    COMBLO          shift and go to state 9
    IDEN            shift and go to state 7
    FUNC            shift and go to state 13
    PROC            shift and go to state 15
    DEFPI           shift and go to state 17
    SI              shift and go to state 19
    DURANTE         shift and go to state 20
    FINPROG         reduce using rule 89 (h -> .)
    AVANZAR         shift and go to state 22
    RETROCEDER      shift and go to state 23
    GIRARIZQ        shift and go to state 24
    GIRARDER        shift and go to state 25
    ESPERAR         shift and go to state 26
    DETENER         shift and go to state 27

    import                         shift and go to state 3
    declvar                        shift and go to state 5
    c                              shift and go to state 10
    d                              shift and go to state 11
    e                              shift and go to state 12
    f                              shift and go to state 14
    g                              shift and go to state 16
    h                              shift and go to state 18
    mov                            shift and go to state 21

state 3

    (1) s -> INICIOPROG import . FINPROG

    FINPROG         shift and go to state 28


state 4

    (2) import -> IMPORT . APAR LIBRER CPAR FINLINEA import

    APAR            shift and go to state 29


state 5

    (3) import -> declvar .

    FINPROG         reduce using rule 3 (import -> declvar .)


state 6

    (4) declvar -> VBLE . APAR IDEN INT CPAR FINLINEA declvar
    (5) declvar -> VBLE . APAR IDEN STRING CPAR FINLINEA declvar
    (6) declvar -> VBLE . APAR IDEN FLOAT CPAR FINLINEA declvar
    (7) declvar -> VBLE . APAR IDEN BOOL CPAR FINLINEA declvar

    APAR            shift and go to state 30


state 7

    (11) c -> IDEN . ASIGN DSTRING FINLINEA c
    (12) c -> IDEN . ASIGN DBOOL FINLINEA c
    (13) c -> IDEN . ASIGN DFLOAT FINLINEA c
    (14) c -> IDEN . ASIGN DINT FINLINEA c
    (18) d -> IDEN . ASIGN IDEN SUMA DINT FINLINEA d
    (19) d -> IDEN . ASIGN IDEN RESTA DINT FINLINEA d
    (20) d -> IDEN . ASIGN IDEN MULT DINT FINLINEA d
    (21) d -> IDEN . ASIGN IDEN DIV DINT FINLINEA d
    (22) d -> IDEN . ASIGN IDEN SUMA DFLOAT FINLINEA d
    (23) d -> IDEN . ASIGN IDEN RESTA DFLOAT FINLINEA d
    (24) d -> IDEN . ASIGN IDEN MULT DFLOAT FINLINEA d
    (25) d -> IDEN . ASIGN IDEN DIV DFLOAT FINLINEA d
    (26) d -> IDEN . ASIGN IDEN SUMA IDEN FINLINEA d
    (27) d -> IDEN . ASIGN IDEN RESTA IDEN FINLINEA d
    (28) d -> IDEN . ASIGN IDEN MULT IDEN FINLINEA d
    (29) d -> IDEN . ASIGN IDEN DIV IDEN FINLINEA d
    (30) d -> IDEN . ASIGN DINT SUMA DINT FINLINEA d
    (31) d -> IDEN . ASIGN DINT RESTA DINT FINLINEA d
    (32) d -> IDEN . ASIGN DINT MULT DINT FINLINEA d
    (33) d -> IDEN . ASIGN DINT DIV DINT FINLINEA d
    (34) d -> IDEN . ASIGN DFLOAT SUMA DFLOAT FINLINEA d
    (35) d -> IDEN . ASIGN DFLOAT RESTA DFLOAT FINLINEA d
    (36) d -> IDEN . ASIGN DFLOAT MULT DFLOAT FINLINEA d
    (37) d -> IDEN . ASIGN DFLOAT DIV DFLOAT FINLINEA d

    ASIGN           shift and go to state 31


state 8
